# TokenDiscoveryFuzzer

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  default_config.json  libpng_comparison_targets.json  run.py
.devcontainer/: devcontainer.json
libfuzzer_libarchive/: .gitignore  Cargo.toml  README.md  build_config.sh  create_simple_corpus.sh  harness.cc  launcher.sh  main.cc  pull_and_decode_corpus_testfiles.sh  test_harness  test_libarchive  token_config.yaml
libfuzzer_libarchive/configs/: baseline_config.json  benchmark_config.json  mdelta_config.json  sais_config.json
libfuzzer_libarchive/src/: lib.rs
libfuzzer_libmozjpeg/: Cargo.toml  README.md
libfuzzer_libmozjpeg/configs/: benchmark_config.json  mdelta_config.json  sais_config.json
libfuzzer_libmxml/: .gitignore  README.md  harness.cc
libfuzzer_libmxml/configs/: benchmark_config.json  mdelta_config.json  sais_config.json
libfuzzer_libmxml/corpus/: attributes.xml  basic.xml  namespaces.xml  rss.xml  svg.xml
libfuzzer_libpng/: .gitignore  Cargo.toml  README.md  build_config.sh  harness.cc  pull_corpus_testfiles.sh  token_config.yaml
libfuzzer_libpng/configs/: base_config.yaml  baseline_config.json  benchmark_config.json  mdelta_config.json  mdelta_config.yaml  sais_config.json  sais_config.yaml
monitoring/: dashboard.json  docker-compose.yml  prometheus.yml
src/: common_substring_discovery.rs  config.rs  lib.rs  smart_token_mutations.rs  test_stage.rs  token_discovery_stage.rs  token_preserving_scheduled_mutator.rs  utils.rs
src/extractors/: corpus.rs  mod.rs  mutation_delta.rs
src/processors/: filter_null_bytes.rs  mod.rs  remove_repetitive.rs  remove_similar.rs  remove_substrings.rs  sais.rs  split_at.rs  strip_bytes.rs
src/strategies/: mod.rs  suffix_array.rs
src/strategies/mdelta/: mod.rs  mutation_delta.rs
src/strategies/sais/: common_substring_discovery.rs  mod.rs  suffix_array.rs
src/tokens/: mod.rs  shared_token_storage.rs  weighted_token.rs
