[package]
name = "TokenDiscoveryFuzzer"
version = "0.15.1"
authors = [
    "Andrea Fioraldi <andreafioraldi@gmail.com>",
    "Dominik Maier <domenukk@gmail.com>",
]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]

[dependencies]
libsais = { version = "0.2", default-features = false }
libafl = {version = "=0.15.4", features = ["default", "prometheus_monitor", "statsd_monitor"]}
libafl_bolts = "=0.15.4"
libafl_targets = { version = "=0.15.4", features = [
    "sancov_pcguard_hitcounts",
    "libfuzzer",
    "sancov_cmplog",
]}
libafl_cc = "0.15.4"

log = { version = "0.4.22", features = ["release_max_level_info"] }
mimalloc = { version = "0.1.43", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lib]
name = "fuzzer_framework"
crate-type = ["staticlib"]
